<resources>
    <string name="app_name">Stonks</string>
    <string name="action_settings">Settings</string>
    <string name="stocks">Stocks</string>
    <string name="favorites">Favorites</string>
    <string name="search">search…</string>
    <string name="loading">Loading</string>
    <string name="no_stocks_found">No stocks found</string>
    <string name="no_news_found">No news found</string>
    <string name="could_not_get_the_link">Error loading this page</string>
    <string name="dark_theme">Dark theme</string>
    <string name="chart_title">Price changes in 14 days, $</string>
</resources>